<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".data_survey.preferenceFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/preference_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/preference_screen_header"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/preference_sub_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:text="@string/preference_sub_header"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preference_header" />

    <Spinner
        android:id="@+id/spinner_class"
        style="@style/Widget.AppCompat.Spinner.DropDown"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#CDDC39"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/standard_header"
        app:layout_constraintTop_toBottomOf="@+id/preference_sub_header" />

    <Spinner
        android:id="@+id/spinner_subject"
        style="@style/Widget.AppCompat.Spinner.DropDown"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FFC107"
        android:dropDownWidth="match_parent"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/preferred_subject_header"
        app:layout_constraintTop_toBottomOf="@+id/spinner_class" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="#FF9800"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_subject">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="What is your prefered mode for giving practice exam?"
            android:textColor="#673AB7"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easy"
            android:onClick="OnRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radioButton_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF9800"
            android:text="@string/medium"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radioButton_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF5722"
            android:text="@string/hard"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <TextView
        android:id="@+id/standard_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="Which standard are you in?"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preference_sub_header" />

    <TextView
        android:id="@+id/preferred_subject_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="Preferred subject"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/standard_header" />

</androidx.constraintlayout.widget.ConstraintLayout>